# icms

./: .gitignore  Makefile  README.md  data.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
src/icms/: __init__.py
src/icms/core/: __init__.py  analyzer.py  exceptions.py  parser.py
src/icms/utils/: .patterns  __init__.py  helpers.py  validators.py
tests/: __init__.py  test_parser.py
